Move hero section to top, posts below

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@ layout: default
 ---
 <section class="newsletter-home">
     <div class="container">
+        <!-- Hero Section -->
+        <div class="home-hero color-bg-blue-0050" style="margin-top: 30px; padding: 60px 40px; border-radius: 12px; text-align: center;">
+            <h2 style="font-size: 3em; color: #030C3C; margin-bottom: 20px; font-weight: 600;">
+                The Systems Thinker's Weekly
+            </h2>
+            <p style="font-size: 1.3em; color: #555; max-width: 700px; margin: 0 auto;">
+                Weekly insights on systems modeling, NGSS alignment, and educational innovation from ModelIt! K12
+            </p>
+        </div>
+
         <!-- Latest Newsletters -->
-        <h2 style="font-size: 2.5em; color: #030C3C; text-align: center; margin-bottom: 50px; padding-top: 30px;">
+        <h2 style="font-size: 2.5em; color: #030C3C; text-align: center; margin-bottom: 50px; margin-top: 60px;">
             Latest Newsletters
         </h2>
 
@@ -48,16 +58,6 @@ layout: default
             <a href="{{ '/archive' | relative_url }}" style="color: #0F6ACE; text-decoration: none; font-size: 1.2em; font-weight: 600;">
                 View All Posts <i class="fas fa-arrow-right" style="margin-left: 8px;"></i>
             </a>
-        </div>
-
-        <!-- Hero Section -->
-        <div class="home-hero color-bg-blue-0050" style="margin-top: 60px; padding: 60px 40px; border-radius: 12px; text-align: center;">
-            <h2 style="font-size: 3em; color: #030C3C; margin-bottom: 20px; font-weight: 600;">
-                The Systems Thinker's Weekly
-            </h2>
-            <p style="font-size: 1.3em; color: #555; max-width: 700px; margin: 0 auto;">
-                Weekly insights on systems modeling, NGSS alignment, and educational innovation from ModelIt! K12
-            </p>
         </div>
 
         <!-- About Section -->
